2012-08-13  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-utils.c (tokenize_rfc2047_phrase): Don't forget to
	initialize 'ascii' to TRUE.

2012-08-05  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-utils.c (rfc2047_token_new_encoded_word): Make sure
	to properly handle broken encoded-word tokens in the form:
	=?charset?q?=.

	Fixes the g_malloc abort() in bug #679388

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): Use
	is_blank() instead of is_lwsp() so that we only treat space and
	tab as word delimiters (we want to rfc2047 encode \r's and
	\n's). Check for ctrl characters when deciding what the type and
	encoding of the word is.

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): When
	breaking up really long atom tokens, change the word type to
	RFC2047 so that we encode them, thus preventing forced header
	folding which cannot be unmunged.
	(header_fold): Fixed for cases where the first word in a header is
	68 chars. (Note: this fix is largely unnecessary due to the above fix)

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c: When setting a header, make sure to
	always clear the header list cache of the toplevel mime_part as
	well.

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-param.c (rfc2184_param_new): Only decode the charset
	and lang if the parameter is actually encoded. Thanks to Peter
	Bloomfield for this patch.

2012-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_scan_headers): Make sure to
	initialize 'start' before using it to calculate headers_end in the
	case where parser_fill() failed.

	Fixes bug #673493.

2012-02-20  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-common.c (g_mime_strdup_trim): Optimized.

	* gmime/gmime-parser.c (header_parse): Use g_mime_strdup_trim()
	instead of reimplementing the same logic here.
